--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <main>
+    <main class="container">
       <header class="text-center">
         <h1 class="mb-3">Spanish Quiz</h1>
 
@@ -19,7 +19,7 @@
           <h2>Statistics</h2>
         </header>
 
-        <div>
+        <div class="table-x-overflow">
           <table class="mx-auto game-text">
             <thead>
               <tr>
